--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 Theme Name: Exolax
 Author: Gramentheme
 Author URI: https://themeforest.net/user/Gramentheme
-Description: Exolax - Creative Agency Html Template
+Description: Inala Digital Creatives
 Version: 1.0.0
 */
 /*CSS Table Of Content Ends Here*/
@@ -8413,3 +8413,4 @@ input.main-search-input::placeholder {
 .testimonial-slider-4 .gt-brand-slide-element, .testimonial-slider-5 .gt-brand-slide-element {
   width: inherit;
 }/*# sourceMappingURL=main.css.map */
+
