--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,7 +2,7 @@
 Theme Name: Exolax
 Author: Gramentheme
 Author URI: https://themeforest.net/user/Gramentheme
-Description: Exolax - Creative Agency Html Template
+Description: Inala Digital Creatives
 Version: 1.0.0
 */
 
@@ -68,4 +68,5 @@ Version: 1.0.0
 
 
 //>> Template Section Style End <<//
+
 
