--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,11 +13,11 @@ Version: 1.0.0
   --body: #fff;
   --black: #000;
   --white: #fff;
-  --theme: #3ed3ba;
+  --theme: #73bf44;
   /* IDC Green (Primary) */
-  --theme2: #31927a;
+  --theme2: #0e773c;
   /* Deep Green (Secondary) */
-  --theme3: #31927a;
+  --theme3: #0e773c;
   /* Deep Green (Replacing Purple) */
   --header: #2C2C2C;
   /* Charcoal (Primary Dark) */
